force-app/main/default/objects/Stripe_Config__mdt/fields/PublishableKey__c.field-meta.xml
<CustomField>
    <fullName>PublishableKey__c</fullName>
    <label>Publishable Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>