force-app/main/default/objects/Stripe_Config__mdt/fields/WebhookSigningSecret__c.field-meta.xml
<CustomField>
    <fullName>WebhookSigningSecret__c</fullName>
    <label>Webhook Signing Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>